--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
   <p><h1>Dubbioso</h1></p>
 
+   <div class="container">
+    <div class="alert alert-success">
+      <strong>SUCCESSO</strong> hai fatto qualcosa di perfetto
+    </div>
+
+    <div class="alert alert-danger alert-dismissible">
+      <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+      <strong>ERRORE</strong> hai sbagliato la parolina
+    </div>
+  
 </body>
 
 </html>
